// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar SidebarItem renders 1`] = `
<ThemeProvider
  theme={[Function]}
>
  <StyledSidebar
    isOpen={true}
  >
    <SidebarItemComponent
      icon="product-components-inverse"
      onClick={[MockFunction]}
      openInNewTab={true}
      url="http://google.com"
    >
      Item label
    </SidebarItemComponent>
  </StyledSidebar>
</ThemeProvider>
`;

exports[`Sidebar SidebarItemLabel renders 1`] = `
.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  padding-top: 12px;
  padding-bottom: 12px;
}

.emotion-2 > div {
  width: auto;
}

.emotion-0 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  padding-right: 16px;
  line-height: 0;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

<div
  className="emotion-2"
>
  <div
    className="emotion-0"
  >
    <IconPropAdapter
      color="inherit"
      icon="product-components-inverse"
      size="s"
    />
  </div>
  <div
    className="emotion-1"
  >
    Item label
  </div>
</div>
`;

exports[`Sidebar SidebarSection renders 1`] = `
.emotion-0 {
  text-transform: capitalize;
  padding-left: 24px;
  padding-right: 24px;
  padding-bottom: 12px;
  padding-top: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  color: #828487;
  font-size: 14px;
  font-weight: 500;
  margin-bottom: 0;
  margin-top: 0;
}

.emotion-0 > div {
  width: auto;
}

.emotion-1 {
  margin: 0;
  list-style: none;
  margin-left: 0;
  margin-top: 0;
  margin-bottom: 0;
  padding-left: 0;
}

<div
  data-cy="sidebarSection"
>
  <h3
    className="emotion-0"
  >
    Label
  </h3>
  <ul
    className="emotion-1"
  >
    <div>
      Sidebar section content
    </div>
  </ul>
</div>
`;

exports[`Sidebar SidebarSubMenu renders 1`] = `
.emotion-0 {
  list-style: none;
  margin-left: 0;
  margin-top: 0;
  margin-bottom: 0;
  padding-left: 0;
}

<ThemeProvider
  theme={[Function]}
>
  <li
    data-cy="sidebarSubMenu"
  >
    <Expandable
      indicatorPosition="right"
      label={
        <div>
          <SidebarItemLabel
            icon="product-components-inverse"
            iconWidth="s"
          >
            Item label
          </SidebarItemLabel>
        </div>
      }
      labelClassName="css-1opfzkn"
    >
      <ul
        className="emotion-0"
      >
        <li
          key="0"
        >
          <SidebarSubMenuItem
            key=".$0"
            onClick={[MockFunction]}
            openInNewTab={true}
            url="http://google.com"
          >
            Item label
          </SidebarSubMenuItem>
        </li>
        <li
          key="1"
        >
          <SidebarSubMenuItem
            key=".$1"
            onClick={[MockFunction]}
            openInNewTab={true}
            url="http://google.com"
          >
            Item label
          </SidebarSubMenuItem>
        </li>
      </ul>
    </Expandable>
  </li>
</ThemeProvider>
`;

exports[`Sidebar SidebarSubMenuItem renders 1`] = `
.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  padding-top: 12px;
  padding-bottom: 12px;
}

.emotion-2 > div {
  width: auto;
}

.emotion-0 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  padding-right: 16px;
  line-height: 0;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

<div
  className="emotion-2"
>
  <div
    className="emotion-0"
  >
    <IconPropAdapter
      color="inherit"
      icon="product-components-inverse"
      size="s"
    />
  </div>
  <div
    className="emotion-1"
  >
    Item label
  </div>
</div>
`;

exports[`Sidebar renders 1`] = `
<ThemeProvider
  theme={[Function]}
>
  <StyledSidebar
    isOpen={true}
  >
    Sidebar content
  </StyledSidebar>
</ThemeProvider>
`;
